siduxcc (0.12.13) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Dec 2008 01:07:55 +0100

siduxcc (0.12.12) unstable; urgency=low

  * add one more possibility to parse Composite as false.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Dec 2008 01:04:31 +0100

siduxcc (0.12.11) unstable; urgency=low

  * fix parsing for Composite in display.bm, thanks to icf7 for noticing.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Dec 2008 00:51:02 +0100

siduxcc (0.12.10) unstable; urgency=low

  * updated greek translation file (thks edhunter)

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 23 Nov 2008 14:43:23 +0100

siduxcc (0.12.9) unstable; urgency=low

  * Messages.sh fixed 

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 25 Sep 2008 21:49:00 +0200

siduxcc (0.12.8) unstable; urgency=low

  * fixed length of button related words.

 -- Chris Hildebrandt <slam@chrishildebrandt.com>  Wed, 24 Sep 2008 10:06:48 +0200

siduxcc (0.12.7) unstable; urgency=low

  * update russian translations, thanks to RoEn.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 21 Sep 2008 17:52:51 +0200

siduxcc (0.12.6) unstable; urgency=low

  [ slam ]
  * translation el (greek) added

  [ Stefan Lippers-Hollmann ]
  * really el locales for cmake.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 21 Sep 2008 00:46:46 +0200

siduxcc (0.12.5) unstable; urgency=low

  * translation: es updated
  * typo: selecet -> selected

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 18 Sep 2008 23:28:49 +0200

siduxcc (0.12.4) unstable; urgency=low

  * more notok-hermes.svg cleanup

 -- Bernard Gray <bernard.gray@gmail.com>  Wed, 03 Sep 2008 22:11:14 +1000

siduxcc (0.12.3) unstable; urgency=low

  * cleanup notok-hermes.svg

 -- Bernard Gray <bernard.gray@gmail.com>  Tue, 02 Sep 2008 21:35:05 +1000

siduxcc (0.12.2) unstable; urgency=low

  * kde3: siduxcc/hermes: some useless links to libs removed
