@@ -1,4 +1,0 @@
-
-install_files( /bin FILES sidux-hermes-gtk2 )
-install_files( /share/applications FILES sidux-hermes-gtk2.desktop )
-
