@@ -1,17 +1,0 @@
- #include <QtGui>
-
- #include "systray.h"
-
- int main(int argc, char *argv[])
- {
-     QApplication app(argc, argv);
-
-     if (!QSystemTrayIcon::isSystemTrayAvailable()) {
-         QMessageBox::critical(0, QObject::tr("Systray"), QObject::tr("I couldn't detect any system tray " "on this system."));
-         return 1;
-     }
-
-     SysTray tray;
-     return app.exec();
-
- }
