@@ -1,8 +1,13 @@
 siduxcc (0.12.13) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Dec 2008 01:07:55 +0100
+  [ Fabian Wuertz ]
+  * sidux-hermes-gkt2 removed (now its part of sidux-hermes)
+  * sidux-hermes-kde4 removed (now its part of sidux-hermes) 
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 05 Feb 2009 22:18:28 +0100
 
 siduxcc (0.12.12) unstable; urgency=low
 
